--- a/example/package.json
+++ b/example/package.json
@@ -27,9 +27,15 @@
         "@opentelemetry/exporter-collector": "^0.18.0",
         "@opentelemetry/exporter-collector-grpc": "^0.18.0",
         "@opentelemetry/exporter-collector-proto": "^0.18.0",
+        "@opentelemetry/instrumentation-http": "^0.18.0",
         "@opentelemetry/metrics": "^0.18.0",
+        "@opentelemetry/node": "^0.18.0",
         "@opentelemetry/tracing": "^0.18.0",
-        "instrument-this": "file:///../"
+        "@types/koa": "^2.13.1",
+        "@types/koa__router": "^8.0.4",
+        "instrument-this": "file:///../",
+        "koa": "^2.13.1",
+        "@koa/router": "^10.0.0"
     },
     "devDependencies": {
         "@types/node": "^14.14.35",
