--- a/example/otel-collector-config.yml
+++ b/example/otel-collector-config.yml
@@ -26,7 +26,7 @@ service:
       receivers: [otlp]
       processors: [batch, queued_retry]
       exporters: [jaeger, logging]
-    # metrics:
-    #   receivers: [otlp]
-    #   exporters: [prometheus]
-    #   processors: [batch, queued_retry]
+    metrics:
+      receivers: [otlp]
+      exporters: [prometheus]
+      processors: [batch, queued_retry]
