--- a/example/prometheus/prometheus.yml
+++ b/example/prometheus/prometheus.yml
@@ -16,7 +16,7 @@ scrape_configs:
   - job_name: 'example'
     scrape_interval: 5s
     static_configs:
-      - targets: ['localhost:8080']
+      - targets: ['172.17.0.1:8080']
 
   - job_name: 'prometheus'
     scrape_interval: 10s
