--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "@opentelemetry/api": "^0.18.0",
+        "@opentelemetry/api-metrics": "^0.18.0",
         "@opentelemetry/core": "^0.18.0",
         "@opentelemetry/metrics": "^0.18.0",
         "@opentelemetry/tracing": "^0.18.0"
