--- a/example/otel-collector-config.yml
+++ b/example/otel-collector-config.yml
@@ -19,14 +19,13 @@ extensions:
   zpages:
 processors:
   batch:
-  queued_retry:
 service:
   pipelines:
     traces:
       receivers: [otlp]
-      processors: [batch, queued_retry]
+      processors: [batch]
       exporters: [jaeger, logging]
-    metrics:
-      receivers: [otlp]
-      exporters: [prometheus]
-      processors: [batch, queued_retry]
+    # metrics:
+    #   receivers: [otlp]
+    #   exporters: [prometheus]
+    #   processors: [batch]
