--- a/example/package.json
+++ b/example/package.json
@@ -35,7 +35,8 @@
         "@types/koa": "^2.13.1",
         "@types/koa__router": "^8.0.4",
         "instrument-this": "file:///../",
-        "koa": "^2.13.1"
+        "koa": "^2.13.1",
+        "prom-client": "^13.1.0"
     },
     "devDependencies": {
         "@types/node": "^14.14.35",
