--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "@opentelemetry/api-metrics": "^0.18.0",
         "@opentelemetry/core": "^0.18.0",
         "@opentelemetry/metrics": "^0.18.0",
-        "@opentelemetry/tracing": "^0.18.0"
+        "@opentelemetry/tracing": "^0.18.0",
+        "prom-client": "^13.1.0"
     },
     "devDependencies": {
         "@types/node": "^14.14.35",
