--- a/example/docker-compose.yml
+++ b/example/docker-compose.yml
@@ -10,9 +10,20 @@ volumes:
 
 
 services:
+
+  example:
+    build:
+      dockerfile: example/Dockerfile
+      context: ../
+    networks:
+      - instrument-this
+    ports:
+      - 8080:8080
+    environment:
+      - OTLP_COLLECTOR_URL=http://otelcol:55681/v1/trace
   otelcol:
     image: otel/opentelemetry-collector:0.22.0
-    command: ["--config=/etc/otel-collector-config.yml", "--log-level=DEBUG"]
+    command: ["--config=/etc/otel-collector-config.yml", "--log-level=WARN"]
     volumes:
       - ./otel-collector-config.yml:/etc/otel-collector-config.yml
     ports:
@@ -58,8 +69,8 @@ services:
     image: grafana/grafana:7.4.2
     volumes:
       - grafana_data:/var/lib/grafana
-      - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
-      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+      - ../grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
+      - ../grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
     environment:
       - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
       - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
