--- a/example/package.json
+++ b/example/package.json
@@ -23,15 +23,15 @@
     },
     "dependencies": {
         "@koa/router": "^10.0.0",
-        "@opentelemetry/api": "^0.18.0",
-        "@opentelemetry/api-metrics": "^0.18.0",
-        "@opentelemetry/core": "^0.18.0",
-        "@opentelemetry/exporter-collector": "^0.18.0",
-        "@opentelemetry/exporter-prometheus": "^0.18.0",
-        "@opentelemetry/instrumentation-http": "^0.18.0",
-        "@opentelemetry/metrics": "^0.18.0",
-        "@opentelemetry/node": "^0.18.0",
-        "@opentelemetry/tracing": "^0.18.0",
+        "@opentelemetry/api": "1.0.0-rc.0",
+        "@opentelemetry/api-metrics": "^0.19.0",
+        "@opentelemetry/core": "^0.19.0",
+        "@opentelemetry/exporter-collector": "^0.19.0",
+        "@opentelemetry/exporter-prometheus": "^0.19.0",
+        "@opentelemetry/instrumentation-http": "^0.19.0",
+        "@opentelemetry/metrics": "^0.19.0",
+        "@opentelemetry/node": "^0.19.0",
+        "@opentelemetry/tracing": "^0.19.0",
         "@types/koa": "^2.13.1",
         "@types/koa__router": "^8.0.4",
         "instrument-this": "file:///../",
@@ -40,7 +40,6 @@
     },
     "devDependencies": {
         "@types/node": "^14.14.35",
-        "esbuild": "^0.9.2",
         "eslint": "^7.22.0",
         "husky": "^5.1.3",
         "lint-staged": "^10.5.4",
