--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "instrument-this",
     "version": "0.0.0",
-    "description": "Effortless OpenTelemetry instrumentation for Node functions",
+    "description": "Effortless OpenTelemetry instrumentation for Node methods",
     "main": "build/index.js",
     "type": "module",
     "sideEffects": false,
@@ -12,30 +12,31 @@
         "url": "git+https://github.com/oguzbilgener/instrument-this.git"
     },
     "scripts": {
-        "build:docs": "exit 1",
         "build": "tsc",
         "clean": "rm -rf build",
-        "test": "exit 1",
-        "semantic-release": "semantic-release",
+        "test": "jest",
         "fmt": "prettier --write '@(src|test)/**/*.@(ts|tsx)'",
         "lint": "npm run lint:source && npm run lint:tests",
         "lint:source": "eslint --ext .ts --ext .tsx src",
         "lint:tests": "eslint --ext .ts --ext .tsx test"
     },
     "dependencies": {
-        "@opentelemetry/api": "^0.18.0",
-        "@opentelemetry/api-metrics": "^0.18.0",
-        "@opentelemetry/core": "^0.18.0",
-        "@opentelemetry/metrics": "^0.18.0",
-        "@opentelemetry/tracing": "^0.18.0",
+        "@opentelemetry/api": "1.0.0-rc.0",
+        "@opentelemetry/api-metrics": "^0.19.0",
+        "@opentelemetry/core": "^0.19.0",
+        "@opentelemetry/metrics": "^0.19.0",
+        "@opentelemetry/tracing": "^0.19.0",
         "prom-client": "^13.1.0"
     },
     "devDependencies": {
-        "@types/node": "^14.14.35",
-        "eslint": "^7.22.0",
-        "husky": "^5.1.3",
+        "@types/jest": "^26.0.23",
+        "@types/node": "^14.17.0",
+        "eslint": "^7.27.0",
+        "husky": "^5.2.0",
+        "jest": "^26.6.3",
         "lint-staged": "^10.5.4",
-        "typescript": "^4.2.3"
+        "ts-jest": "^26.5.6",
+        "typescript": "^4.2.4"
     },
     "lint-staged": {
         "src/**/*.{ts,tsx}": [
